# signal-schema

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  build.rs  flake.nix
examples/: canonical.nota
schema/: lib.schema
src/: error.rs  lib.rs
src/schema/: lib.rs
tests/: dependency_boundary.rs  round_trip.rs
tests/fixtures/: minimal.schema
