[package]
name="signal-schema"
version="0.3.0"
edition="2024"
rust-version="1.89"
license="MIT OR Apache-2.0"
repository="https://github.com/LiGoldragon/signal-schema"
description="Typed binary contract for the Core-first schema daemon"
[dependencies]
rkyv={version="0.8",features=["bytecheck"]}
signal-sema-storage={git="https://github.com/LiGoldragon/signal-sema-storage.git",rev="25ac4fd0abf5d58ab9fce1f10d58220b62bef902"}
thiserror="2"
[lints.rust]
unsafe_code="forbid"
